--- a/legal-services.html
+++ b/legal-services.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <title>Chariti &#8211; Charity &amp; Donation HTML Template</title>
+    <title>ICAS &#8211; Indian Community Advocacy & Support </title>
 
     <link rel='stylesheet' href='js/plugins/the-events-calendar/common/src/resources/css/common-skeleton.min.css'
         type='text/css' media='all' />
