--- a/Servies.html
+++ b/Servies.html
@@ -47,9 +47,9 @@
             <div class="chariti-mobile-header-container chariti-container clearfix">
                 <div class="chariti-logo  chariti-item-pdlr">
                     <div class="chariti-logo-inner">
-                        <a class="chariti-fixed-nav-logo" href="index.html"><img src="upload/mobile-logo-demo-2.png"
+                        <a class="chariti-fixed-nav-logo" href="index.html"><img src="upload/logo-demo-3.png"
                                 alt="" width="301" height="65" title="mobile-logo-demo-2" /></a>
-                        <a class=" chariti-orig-logo" href="index.html"><img src="upload/mobile-logo-demo-2.png" alt=""
+                        <a class=" chariti-orig-logo" href="index.html"><img src="upload/logo-demo-3.png" alt=""
                                 width="301" height="65" title="mobile-logo-demo-2" /></a>
                     </div>
                 </div>
@@ -86,7 +86,7 @@
                                         class="sf-with-ul-pre">Our
                                         Services</a>
                                     <ul class="sub-menu">
-                                        <li class="menu-item" data-size="60"><a href="Women.html">Women</a></li>
+                                        <li class="menu-item" data-size="60"><a href="women.html">Women</a></li>
                                         <li class="menu-item" data-size="60"><a href="youth-leadership.html">Youth
                                                 leadership</a></li>
                                         <li class="menu-item" data-size="60"><a href="student-empowerment.html">Student
@@ -122,7 +122,7 @@
                             <div class="chariti-logo  chariti-item-pdlr">
                                 <div class="chariti-logo-inner">
                                     <a class="chariti-fixed-nav-logo" href="index.html"><img
-                                            src="upload/mobile-logo-demo-2.png" alt="" width="301" height="65"
+                                            src="upload/logo-demo-3.png" alt="" width="301" height="65"
                                             title="mobile-logo-demo-2" /></a>
                                     <a class=" chariti-orig-logo" href="index.html"><img src="upload/logo-demo-3.png"
                                             alt="" width="305" height="75" title="logo-demo-3" /></a>
@@ -157,7 +157,7 @@
                                                 href="Servies.html" class="sf-with-ul-pre">Our
                                                 Services</a>
                                             <ul class="sub-menu">
-                                                <li class="menu-item" data-size="60"><a href="Women.html">Women</a></li>
+                                                <li class="menu-item" data-size="60"><a href="women.html">Women</a></li>
                                                 <li class="menu-item" data-size="60"><a
                                                         href="youth-leadership.html">Youth
                                                         leadership</a></li>
@@ -239,7 +239,7 @@
                                             <div class="frmaster-cause-modern  frmaster-with-image gdlr-core-outer-frame-element"
                                                 style="box-shadow: 0 0 30px rgba(10, 10, 10,0.08); -moz-box-shadow: 0 0 30px rgba(10, 10, 10,0.08); -webkit-box-shadow: 0 0 30px rgba(10, 10, 10,0.08); ">
                                                 <div class="frmaster-cause-thumbnail frmaster-media-image">
-                                                    <a href="Women.html"><img
+                                                    <a href="women.html"><img
                                                             src="upload/cause-thumbnail-donation-700x990.jpg" alt=""
                                                             width="700" height="990" />
                                                         <div class="frmaster-cause-thumbnail-gradient"></div>
@@ -249,13 +249,13 @@
                                                     style="padding-bottom: 30px;">
                                                     <h3 class="frmaster-cause-title gdlr-core-skin-title"
                                                         style="font-size: 29px;font-weight: 800;text-transform: none;">
-                                                        <a href="Women.html">Women</a>
+                                                        <a href="women.html">Women</a>
                                                     </h3>
                                                     <div class="frmaster-cause-donated-bar-wrap clearfix">
                                                         <div class="frmaster-cause-donated-amount">Empowering Indian
                                                             women through education, support, and leadership
                                                             opportunities to build a stronger, inclusive community.
-                                                        </div><a href="Women.html"
+                                                        </div><a href="women.html"
                                                             class="frmaster-follow frmaster-follow-button"
                                                             data-frmlb="follow-login"><i></i></a>
                                                     </div>
