--- a/single-cause.html
+++ b/single-cause.html
@@ -35,8 +35,8 @@
             <div class="chariti-mobile-header-container chariti-container clearfix">
                 <div class="chariti-logo  chariti-item-pdlr">
                     <div class="chariti-logo-inner">
-                        <a class="chariti-fixed-nav-logo" href="index.html"><img src="upload/mobile-logo-demo-2.png" alt="" width="301" height="65" title="mobile-logo-demo-2" /></a>
-                        <a class=" chariti-orig-logo" href="index.html"><img src="upload/mobile-logo-demo-2.png" alt="" width="301" height="65" title="mobile-logo-demo-2" /></a>
+                        <a class="chariti-fixed-nav-logo" href="index.html"><img src="upload/logo-demo-3.png" alt="" width="301" height="65" title="mobile-logo-demo-2" /></a>
+                        <a class=" chariti-orig-logo" href="index.html"><img src="upload/logo-demo-3.png" alt="" width="301" height="65" title="mobile-logo-demo-2" /></a>
                     </div>
                 </div>
                 <div class="chariti-mobile-menu-right">
@@ -220,7 +220,7 @@
                     <div class="chariti-header-container-inner clearfix">
                         <div class="chariti-logo  chariti-item-pdlr">
                             <div class="chariti-logo-inner">
-                                <a class="chariti-fixed-nav-logo" href="index.html"><img src="upload/mobile-logo-demo-2.png" alt="" width="301" height="65" title="mobile-logo-demo-2" /></a>
+                                <a class="chariti-fixed-nav-logo" href="index.html"><img src="upload/logo-demo-3.png" alt="" width="301" height="65" title="mobile-logo-demo-2" /></a>
                                 <a class=" chariti-orig-logo" href="index.html"><img src="upload/logo-demo-2.png" alt="" width="144" height="110" title="logo-demo-2" /></a>
                             </div>
                         </div>
