--- a/student-empowerment.html
+++ b/student-empowerment.html
@@ -47,9 +47,9 @@
             <div class="chariti-mobile-header-container chariti-container clearfix">
                 <div class="chariti-logo  chariti-item-pdlr">
                     <div class="chariti-logo-inner">
-                        <a class="chariti-fixed-nav-logo" href="index.html"><img src="upload/mobile-logo-demo-2.png"
+                        <a class="chariti-fixed-nav-logo" href="index.html"><img src="upload/logo-demo-3.png"
                                 alt="" width="301" height="65" title="mobile-logo-demo-2" /></a>
-                        <a class=" chariti-orig-logo" href="index.html"><img src="upload/mobile-logo-demo-2.png" alt=""
+                        <a class=" chariti-orig-logo" href="index.html"><img src="upload/logo-demo-3.png" alt=""
                                 width="301" height="65" title="mobile-logo-demo-2" /></a>
                     </div>
                 </div>
@@ -86,7 +86,7 @@
                                         class="sf-with-ul-pre">Our
                                         Services</a>
                                     <ul class="sub-menu">
-                                        <li class="menu-item" data-size="60"><a href="Women.html">Women</a></li>
+                                        <li class="menu-item" data-size="60"><a href="women.html">Women</a></li>
                                         <li class="menu-item" data-size="60"><a href="youth-leadership.html">Youth
                                                 leadership</a></li>
                                         <li class="menu-item" data-size="60"><a href="student-empowerment.html">Student
@@ -117,7 +117,7 @@
                             <div class="chariti-logo  chariti-item-pdlr">
                                 <div class="chariti-logo-inner">
                                     <a class="chariti-fixed-nav-logo" href="index.html"><img
-                                            src="upload/mobile-logo-demo-2.png" alt="" width="301" height="65"
+                                            src="upload/logo-demo-3.png" alt="" width="301" height="65"
                                             title="mobile-logo-demo-2" /></a>
                                     <a class=" chariti-orig-logo" href="index.html"><img src="upload/logo-demo-3.png"
                                             alt="" width="305" height="75" title="logo-demo-3" /></a>
@@ -152,7 +152,7 @@
                                                 href="Servies.html" class="sf-with-ul-pre">Our
                                                 Services</a>
                                             <ul class="sub-menu">
-                                                <li class="menu-item" data-size="60"><a href="Women.html">Women</a></li>
+                                                <li class="menu-item" data-size="60"><a href="women.html">Women</a></li>
                                                 <li class="menu-item" data-size="60"><a
                                                         href="youth-leadership.html">Youth
                                                         leadership</a></li>
@@ -215,7 +215,8 @@
                 <div class="chariti-page-title-container chariti-container">
                     <div class="chariti-page-title-content chariti-item-pdlr">
                         <h1 class="chariti-page-title">Student Empowerment</h1>
-                        <div class="chariti-page-caption">Supporting Indian students with academic resources, career guidance, and personal development to help them succeed and thrive.</div>
+                        <div class="chariti-page-caption">Supporting Indian students with academic resources, career
+                            guidance, and personal development to help them succeed and thrive.</div>
                     </div>
                 </div>
             </div>
@@ -350,59 +351,108 @@
                             </div> <!-- End container -->
                         </div>
                     </div>
+                </div>
+            </div>
+            <div class="gdlr-core-pbf-wrapper" style="padding: 90px 0px 60px 0px;">
+                <div class="gdlr-core-pbf-background-wrap" style="background-color: #ffffff;"></div>
+                <div class="gdlr-core-pbf-wrapper-content gdlr-core-js">
+                    <div class="gdlr-core-pbf-wrapper-container clearfix gdlr-core-container">
 
-                    <!-- Second Section: Our Mission -->
-                    <div class="gdlr-core-pbf-wrapper " style="padding: 110px 0px 60px 0px;">
-                        <div class="gdlr-core-pbf-background-wrap"></div>
-                        <div class="gdlr-core-pbf-wrapper-content gdlr-core-js ">
-                            <div class="gdlr-core-pbf-wrapper-container clearfix gdlr-core-container">
-                                <div class="gdlr-core-pbf-element">
-                                    <div class="gdlr-core-title-item gdlr-core-item-pdb clearfix gdlr-core-center-align gdlr-core-title-item-caption-top gdlr-core-item-pdlr"
-                                        style="padding-bottom: 100px;">
-                                        <div class="gdlr-core-title-item-title-wrap ">
-                                            <h3 class="gdlr-core-title-item-title gdlr-core-skin-title"
-                                                style="font-size: 33px;">
-                                                Our Mission
-                                                <span
-                                                    class="gdlr-core-title-item-title-divider gdlr-core-skin-divider"></span>
-                                            </h3>
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="gdlr-core-pbf-column gdlr-core-column-60 gdlr-core-column-first">
-                                    <div class="gdlr-core-pbf-column-content-margin gdlr-core-js "
-                                        style="padding: 0px 30px 0px 30px;">
-                                        <div class="gdlr-core-pbf-background-wrap"></div>
-                                        <div class="gdlr-core-pbf-column-content clearfix gdlr-core-js ">
-                                            <div class="gdlr-core-pbf-element">
-                                                <div
-                                                    class="gdlr-core-column-service-item gdlr-core-item-pdb gdlr-core-center-align gdlr-core-no-caption gdlr-core-item-pdlr">
-                                                    <div
-                                                        class="gdlr-core-column-service-media gdlr-core-media-icon gdlr-core-icon-style-round">
-                                                        <i class="fa fa-star gdlr-core-skin-e-background gdlr-core-skin-e-content"
-                                                            style="font-size: 25px; line-height: 25px; width: 25px; color: #ffffff; background-color: #2d70ea;"></i>
-                                                    </div>
-                                                    <div class="gdlr-core-column-service-content-wrapper">
-                                                        <div class="gdlr-core-column-service-content">
-                                                            <p>The Indian Community Advocacy & Support initiative aims
-                                                                to empower and uplift the Indian diaspora by providing
-                                                                culturally sensitive programs, fostering resilience, and
-                                                                advocating for equity in education, health, and economic
-                                                                opportunities.</p>
-                                                            <a class="gdlr-core-column-service-read-more gdlr-core-info-font"
-                                                                href="#"></a>
-                                                        </div>
-                                                    </div>
-                                                </div>
-                                            </div>
-                                        </div>
+                        <!-- Section Heading -->
+                        <div class="gdlr-core-pbf-element">
+                            <div class="gdlr-core-title-item gdlr-core-item-pdb clearfix gdlr-core-center-align gdlr-core-item-pdlr"
+                                style="padding-bottom: 60px;">
+                                <div class="gdlr-core-title-item-title-wrap">
+                                    <h3 class="gdlr-core-title-item-title gdlr-core-skin-title"
+                                        style="font-size: 33px;">
+                                        Empowering Students for a Brighter Future
+                                        <span class="gdlr-core-title-item-title-divider gdlr-core-skin-divider"></span>
+                                    </h3>
+                                    <div class="gdlr-core-title-item-caption" style="color: #666;">
+                                        Supporting students through education, leadership, and opportunity
                                     </div>
                                 </div>
                             </div>
                         </div>
+
+                        <!-- Image Column -->
+                        <div class="gdlr-core-pbf-column gdlr-core-column-30 gdlr-core-column-first">
+                            <div class="gdlr-core-pbf-column-content-margin gdlr-core-js" style="padding: 10px 30px;">
+                                <div class="gdlr-core-pbf-column-content clearfix gdlr-core-js">
+                                    <div class="gdlr-core-pbf-element">
+                                        <img src="https://images.unsplash.com/photo-1557989048-03456d01a26e"
+                                            alt="Student Empowerment" style="width: 100%; border-radius: 12px;" />
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+
+                        <!-- Content Column -->
+                        <div class="gdlr-core-pbf-column gdlr-core-column-30">
+                            <div class="gdlr-core-pbf-column-content-margin gdlr-core-js" style="padding: 10px 30px;">
+                                <div class="gdlr-core-pbf-column-content clearfix gdlr-core-js">
+
+                                    <div class="gdlr-core-pbf-element gdlr-core-icon-box-item gdlr-core-item-pdlr">
+                                        <div class="gdlr-core-icon-box-icon-wrap"><i class="fa fa-star"
+                                                style="font-size: 30px; color: #2d70ea;"></i></div>
+                                        <h4 class="gdlr-core-skin-title" style="margin-top: 10px;">Our Mission</h4>
+                                        <p>The Indian Community Advocacy & Support initiative aims
+                                            to empower and uplift the Indian diaspora by providing
+                                            culturally sensitive programs, fostering resilience, and
+                                            advocating for equity in education, health, and economic
+                                            opportunities.</p>
+                                    </div>
+                                    <!-- Icon 1 -->
+                                    <div class="gdlr-core-pbf-element gdlr-core-icon-box-item gdlr-core-item-pdlr"
+                                        style="margin-bottom: 30px;">
+                                        <div class="gdlr-core-icon-box-icon-wrap"><i class="fa fa-book"
+                                                style="font-size: 30px; color: #2d70ea;"></i></div>
+                                        <h4 class="gdlr-core-skin-title" style="margin-top: 10px;">Access to Quality
+                                            Education</h4>
+                                        <p>We believe every student deserves equal access to learning resources and
+                                            tools for academic success.</p>
+                                    </div>
+
+                                    <!-- Icon 2 -->
+                                    <div class="gdlr-core-pbf-element gdlr-core-icon-box-item gdlr-core-item-pdlr"
+                                        style="margin-bottom: 30px;">
+                                        <div class="gdlr-core-icon-box-icon-wrap"><i class="fa fa-lightbulb-o"
+                                                style="font-size: 30px; color: #2d70ea;"></i></div>
+                                        <h4 class="gdlr-core-skin-title" style="margin-top: 10px;">Innovation &
+                                            Creativity</h4>
+                                        <p>We encourage students to think creatively and develop innovative solutions
+                                            for real-world problems.</p>
+                                    </div>
+
+                                    <!-- Icon 3 -->
+                                    <div class="gdlr-core-pbf-element gdlr-core-icon-box-item gdlr-core-item-pdlr"
+                                        style="margin-bottom: 30px;">
+                                        <div class="gdlr-core-icon-box-icon-wrap"><i class="fa fa-users"
+                                                style="font-size: 30px; color: #2d70ea;"></i></div>
+                                        <h4 class="gdlr-core-skin-title" style="margin-top: 10px;">Leadership &
+                                            Confidence</h4>
+                                        <p>We empower students to become confident leaders in school, college, and their
+                                            future careers.</p>
+                                    </div>
+
+                                    <!-- Icon 4 -->
+                                    <div class="gdlr-core-pbf-element gdlr-core-icon-box-item gdlr-core-item-pdlr">
+                                        <div class="gdlr-core-icon-box-icon-wrap"><i class="fa fa-handshake-o"
+                                                style="font-size: 30px; color: #2d70ea;"></i></div>
+                                        <h4 class="gdlr-core-skin-title" style="margin-top: 10px;">Mentorship & Guidance
+                                        </h4>
+                                        <p>Through mentorship, workshops, and networking, we help students navigate
+                                            their academic and career journeys.</p>
+                                    </div>
+
+                                </div>
+                            </div>
+                        </div>
+
                     </div>
                 </div>
             </div>
+
 
             <footer>
                 <div class="chariti-footer-wrapper ">
