--- a/cause-list-side-thumbnail.html
+++ b/cause-list-side-thumbnail.html
@@ -36,9 +36,9 @@
             <div class="chariti-mobile-header-container chariti-container clearfix">
                 <div class="chariti-logo  chariti-item-pdlr">
                     <div class="chariti-logo-inner">
-                        <a class="chariti-fixed-nav-logo" href="index.html"><img src="upload/mobile-logo-demo-2.png"
+                        <a class="chariti-fixed-nav-logo" href="index.html"><img src="upload/logo-demo-3.png"
                                 alt="" width="301" height="65" title="mobile-logo-demo-2" /></a>
-                        <a class=" chariti-orig-logo" href="index.html"><img src="upload/mobile-logo-demo-2.png" alt=""
+                        <a class=" chariti-orig-logo" href="index.html"><img src="upload/logo-demo-3.png" alt=""
                                 width="301" height="65" title="mobile-logo-demo-2" /></a>
                     </div>
                 </div>
@@ -75,7 +75,7 @@
                                         href="Servies.html" class="sf-with-ul-pre">Our
                                         Services</a>
                                     <ul class="sub-menu">
-                                        <li class="menu-item" data-size="60"><a href="Women.html">Women</a></li>
+                                        <li class="menu-item" data-size="60"><a href="women.html">Women</a></li>
                                         <li class="menu-item" data-size="60"><a href="youth-leadership.html">Youth
                                                 leadership</a></li>
                                         <li class="menu-item" data-size="60"><a href="student-empowerment.html">Student
@@ -107,7 +107,7 @@
                             <div class="chariti-logo  chariti-item-pdlr">
                                 <div class="chariti-logo-inner">
                                     <a class="chariti-fixed-nav-logo" href="index.html"><img
-                                            src="upload/mobile-logo-demo-2.png" alt="" width="301" height="65"
+                                            src="upload/logo-demo-3.png" alt="" width="301" height="65"
                                             title="mobile-logo-demo-2" /></a>
                                     <a class=" chariti-orig-logo" href="index.html"><img src="upload/logo-demo-3.png"
                                             alt="" width="305" height="75" title="logo-demo-3" /></a>
@@ -142,7 +142,7 @@
                                                 href="Servies.html" class="sf-with-ul-pre">Our
                                                 Services</a>
                                             <ul class="sub-menu">
-                                        <li class="menu-item" data-size="60"><a href="Women.html">Women</a></li>
+                                        <li class="menu-item" data-size="60"><a href="women.html">Women</a></li>
                                         <li class="menu-item" data-size="60"><a href="youth-leadership.html">Youth
                                                 leadership</a></li>
                                         <li class="menu-item" data-size="60"><a href="student-empowerment.html">Student
