--- a/about.html
+++ b/about.html
@@ -5,7 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <title>ICAS &#8211; Indian Community Advocacy & Support </title>
+        <title>ICAS &#8211; Indian Community Advocacy & Support </title>
+    <link rel="icon" href="images/Favion.png" type="image/png" />
 
     <link rel='stylesheet' href='js/plugins/the-events-calendar/common/src/resources/css/common-skeleton.min.css'
         type='text/css' media='all' />
