--- a/youth-leadership.html
+++ b/youth-leadership.html
@@ -5,7 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-<title>ICAS &#8211; Indian Community Advocacy & Support </title>
+    <title>ICAS &#8211; Indian Community Advocacy & Support </title>
+    <link rel="icon" href="images/Favion.png" type="image/png" />
 
     <link rel='stylesheet' href='js/plugins/the-events-calendar/common/src/resources/css/common-skeleton.min.css'
         type='text/css' media='all' />
@@ -274,7 +275,7 @@
                                                                 service, and provides a platform for youth to practice
                                                                 communication and critical thinking.</p>
                                                             <a class="gdlr-core-column-service-read-more gdlr-core-info-font"
-                                                                href="#">Read More</a>
+                                                                href="#"></a>
                                                         </div>
                                                     </div>
                                                 </div>
@@ -312,8 +313,7 @@
                                                                 (ages 9-16). Registration opens May 17, 2025, at 9:00am
                                                                 online.</p>
                                                             <a class="gdlr-core-column-service-read-more gdlr-core-info-font"
-                                                                href="https://iacswa.org/event/iacs-ylp-camp-bharat-2025-registration/">Read
-                                                                More</a>
+                                                                href="https://iacswa.org/event/iacs-ylp-camp-bharat-2025-registration/"></a>
                                                         </div>
                                                     </div>
                                                 </div>
@@ -350,8 +350,7 @@
                                                                 August 24th - September 8th, applications due September
                                                                 11th, interviews October 5th-6th.</p>
                                                             <a class="gdlr-core-column-service-read-more gdlr-core-info-font"
-                                                                href="https://iacswa.org/event/youth-board-yb-registration-9th-11th-graders/">Read
-                                                                More</a>
+                                                                href="https://iacswa.org/event/youth-board-yb-registration-9th-11th-graders/"></a>
                                                         </div>
                                                     </div>
                                                 </div>
@@ -412,7 +411,7 @@
                                                                 community ties, and earn community service credits for
                                                                 schools, internships, and college applications.</p>
                                                             <a class="gdlr-core-column-service-read-more gdlr-core-info-font"
-                                                                href="#">Read More</a>
+                                                                href="#"></a>
                                                         </div>
                                                     </div>
                                                 </div>
@@ -451,8 +450,8 @@
                                                                 Year-round (Sept 7-17, 2024), Project-based (Dec 2024 -
                                                                 Mar 2025).</p>
                                                             <a class="gdlr-core-column-service-read-more gdlr-core-info-font"
-                                                                href="https://iacswa.org/event/youth-advocacy-ya-registration-9th-12th-graders/">Read
-                                                                More</a>
+                                                                href="https://iacswa.org/event/youth-advocacy-ya-registration-9th-12th-graders/">
+                                                                </a>
                                                         </div>
                                                     </div>
                                                 </div>
@@ -490,8 +489,8 @@
                                                                 space and volunteer opportunities. Registration: Sept
                                                                 21, 2024.</p>
                                                             <a class="gdlr-core-column-service-read-more gdlr-core-info-font"
-                                                                href="https://iacswa.org/event/youth-council-yc-registration-8th-10th-graders/">Read
-                                                                More</a>
+                                                                href="https://iacswa.org/event/youth-council-yc-registration-8th-10th-graders/">
+                                                                </a>
                                                         </div>
                                                     </div>
                                                 </div>
