--- a/counters.html
+++ b/counters.html
@@ -82,12 +82,15 @@
                                                 empowerment </a></li>
                                         <li class="menu-item" data-size="60"><a href="small-business.html">Small
                                                 business</a></li>
-                                        <li class="menu-item" data-size="60"><a href="legal-services.html"> Services
+                                        <li class="menu-item" data-size="60"><a href="legal-services.html">Legal Services
                                                     </a></li>
                                     </ul>
-                                <li class="menu-item menu-item-has-children chariti-normal-menu"><a href="index.html"
-                                        aria-current="page">Contact Us</a></li>
-
+                                        <li class="menu-item menu-item-has-children chariti-normal-menu"><a
+                                                href="info.html" aria-current="page">Info</a></li>
+                                        <li class="menu-item menu-item-has-children chariti-normal-menu">
+                                            <a href="faqs.html">FAQs</a>
+                                <li><a href="contact.html" aria-current="page">Contact Us</a>
+                                </li>
                                 </li>
                             </ul>
                         </div>
@@ -151,6 +154,11 @@
                                         <li class="menu-item" data-size="60"><a href="legal-services.html"> Legal Services
                                                     </a></li>
                                             </ul>
+                                        </li>
+                                        <li class="menu-item menu-item-has-children chariti-normal-menu"><a
+                                                href="info.html" aria-current="page">Info</a></li>
+                                        <li class="menu-item menu-item-has-children chariti-normal-menu">
+                                            <a href="faqs.html">FAQs</a>
                                         </li>
                                         <li class="menu-item menu-item-has-children chariti-normal-menu">
                                             <a href="contact.html">Contact</a>
@@ -474,7 +482,7 @@
                         <div class="chariti-footer-column chariti-item-pdlr chariti-column-15">
                             <div id="text-1" class="widget widget_text chariti-widget">
                                 <div class="textwidget">
-                                    <p><img class="alignnone size-full wp-image-7859" src="upload/footer-logo.png" alt="" width="92" />
+                                    <p><img class="alignnone size-full wp-image-7859" src="upload/footer-logo.png" alt="" width="200" />
                                         <br /> Towards the end of the 19th century, with the advent of the New Liberalism and the innovative</p>
                                     <div class="gdlr-core-social-network-item gdlr-core-item-pdb  gdlr-core-none-align" style="padding-bottom: 0px ;"><a href="#url" target="_blank" class="gdlr-core-social-network-icon" title="facebook" style="font-size: 20px ;color: #ffffff ;" rel="noopener noreferrer"><i class="fa fa-facebook" ></i></a><a href="#" target="_blank" class="gdlr-core-social-network-icon" title="linkedin" style="font-size: 20px ;color: #ffffff ;" rel="noopener noreferrer"><i class="fa fa-linkedin" ></i></a><a href="#url" target="_blank" class="gdlr-core-social-network-icon" title="twitter" style="font-size: 20px ;color: #ffffff ;" rel="noopener noreferrer"><i class="fa fa-twitter" ></i></a><a href="#" target="_blank" class="gdlr-core-social-network-icon" title="instagram" style="font-size: 20px ;color: #ffffff ;" rel="noopener noreferrer"><i class="fa fa-instagram" ></i></a></div>
                                 </div>
@@ -498,7 +506,7 @@
                                         <br />
                                         <span class="gdlr-core-space-shortcode" style="margin-top: -15px ;"></span>
                                         <br />
-                                        <i class="icon-envelope-open" style="font-size: 15px ;color: #B9BAFF ;margin-right: 10px ;"></i><a style="color: #ffffff;" href="#"><span class="__cf_email__" >test@gmail.com</span></a></p>
+                                        <i class="icon-envelope-open" style="font-size: 15px ;color: #B9BAFF ;margin-right: 10px ;"></i><a style="color: #ffffff;" href="#"><span class="__cf_email__" >info@theicas.org</span></a></p>
                                 </div>
                             </div>
                         </div>
