--- a/donate.html
+++ b/donate.html
@@ -66,6 +66,7 @@
                                         <li class="menu-item"><a href="about-team.html">About Team</a></li>
                                         <li class="menu-item"><a href="become-a-volunteer.html">Become a Volunteer</a></li>
                                         <li class="menu-item"><a href="event-calendar.html">Event Calendar</a></li>
+                                                                                <li class="menu-item"><a href="info.html">Info</a></li>
                                         <li class="menu-item"><a href="contact.html">Contact</a></li>
                                         <li class="menu-item"><a href="team-plain-style.html">Team</a></li>
                                         <li class="menu-item"><a href="gallery.html">Gallery</a></li>
@@ -390,7 +391,7 @@
                                     <div class="chariti-navigation-slide-bar  chariti-navigation-slide-bar-style-2 chariti-left" data-size-offset="0" data-width="11" id="chariti-navigation-slide-bar"></div>
                                 </div>
                                 <div class="chariti-main-menu-right-wrap clearfix ">
-                                    <a class="chariti-main-menu-right-button chariti-button-1 chariti-style-default" href="donate.html" target="_self">Donate</a>
+                                    <a class="chariti-main-menu-right-button chariti-button-1 chariti-style-default" href="#" target="_self">Donate</a>
                                     <a class="chariti-main-menu-right-button chariti-button-2 chariti-style-default" href="become-a-volunteer.html" target="_self">Volunteer</a>
                                 </div>
                             </div>
@@ -442,7 +443,7 @@
                                         <a class="gdlr-core-social-share-pinterest" href="#" target="_blank"><i class="fa fa-pinterest-p" ></i></a>
                                         <a class="gdlr-core-social-share-twitter" href="#" target="_blank"><i class="fa fa-twitter" ></i></a>
                                     </div>
-                                    <a class="frmaster-button frmaster-donate-button gdlr-core-button-color" href="donate.html">Donate Now</a>
+                                    <a class="frmaster-button frmaster-donate-button gdlr-core-button-color" href="#">Donate Now</a>
                                     <a href="#" class="frmaster-follow frmaster-button frmaster-border-style" data-frmlb="follow-login"><i class="fa fa-heart-o" ></i>Follow</a>
                                 </div>
                             </div>
@@ -1036,9 +1037,8 @@
                             <div id="text-1" class="widget widget_text chariti-widget">
                                 <div class="textwidget">
                                     <p><img class="alignnone size-full wp-image-7859"
-                                            src="../demo1/upload/footer-logo.png" alt="" width="92" />
-                                        <br /> Towards the end of the 19th century, with the advent of the New
-                                        Liberalism and the innovative
+                                            src="upload/logo-demo-3.png" alt="" width="200" />
+                                        <br /> Supporting and advocating for the Indian community — united in voice, strong in purpose.
                                     </p>
                                     <div class="gdlr-core-social-network-item gdlr-core-item-pdb  gdlr-core-none-align"
                                         style="padding-bottom: 0px ;"><a href="#url" target="_blank"
@@ -1059,30 +1059,29 @@
                         </div>
                         <div class="chariti-footer-column chariti-item-pdlr chariti-column-15">
                             <div id="text-10" class="widget widget_text chariti-widget">
-                                <h3 class="chariti-widget-title">Contact Info</h3><span class="clear"></span>
+                                <h3 class="chariti-widget-title">Contact Info :</h3><span class="clear"></span>
                                 <div class="textwidget">
-                                    <p>Box 3233
-                                        <br /> 1810 Kings Way
-                                        <br /> King Street, 5th Avenue, New York
-                                        <br />
+                                    <p> <i class="icon-phone"
+                                            style="font-size: 15px ;color: #3BCF93 ;margin-right: 10px ;"></i><strong
+                                            style="font-size: 15x; color: #ffffff">Address</strong> : 44 Fairground St
+                                        SE
+                                        <br /> Marietta, GA 30060
                                         <span class="gdlr-core-space-shortcode" style="margin-top: 0px ;"></span>
                                         <br />
                                         <i class="icon-phone"
                                             style="font-size: 15px ;color: #3BCF93 ;margin-right: 10px ;"></i><span
-                                            style="color: #ffffff;"><strong>New York</strong> : 1800-2355-2356</span>
+                                            style="color: #ffffff;"><strong>Phone Number</strong> : +1 (770)
+                                            990-6269</span>
                                         <br />
                                         <span class="gdlr-core-space-shortcode" style="margin-top: -15px ;"></span>
                                         <br />
-                                        <i class="icon-phone"
-                                            style="font-size: 15px ;color: #3BCF93 ;margin-right: 10px ;"></i><span
-                                            style="color: #ffffff;"><strong>London</strong> : 020-1455-236-34</span>
-                                        <br />
+
                                         <span class="gdlr-core-space-shortcode" style="margin-top: -15px ;"></span>
                                         <br />
                                         <i class="icon-envelope-open"
                                             style="font-size: 15px ;color: #3BCF93 ;margin-right: 10px ;"></i><a
                                             style="color: #ffffff;" href="#"><span
-                                                class="__cf_email__">test@gmail.com</span></a>
+                                                class="__cf_email__">info@theicas.org</span></a>
                                     </p>
                                 </div>
                             </div>
@@ -1094,8 +1093,9 @@
                                     <ul id="menu-quick-links" class="menu">
                                         <li class="menu-item"><a href="index.html">Home</a></li>
                                         <li class="menu-item"><a href="about.html">About Us</a></li>
-                                        <li class="menu-item"><a href="Servies.html">Our Servies</a>
+                                        <li class="menu-item"><a href="Servies.html">Our Services</a> 
                                         </li>
+                                                                                <li class="menu-item"><a href="info.html">Info</a></li>
                                         <li class="menu-item"><a href="contact.html">Contact</a></li>
                                     </ul>
                                 </div>
