--- a/testimonial.html
+++ b/testimonial.html
@@ -82,12 +82,15 @@
                                                 empowerment </a></li>
                                         <li class="menu-item" data-size="60"><a href="small-business.html">Small
                                                 business</a></li>
-                                        <li class="menu-item" data-size="60"><a href="legal-services.html"> Services
+                                        <li class="menu-item" data-size="60"><a href="legal-services.html">Legal Services
                                                     </a></li>
                                     </ul>
-                                <li class="menu-item menu-item-has-children chariti-normal-menu"><a href="index.html"
-                                        aria-current="page">Contact Us</a></li>
-
+                                        <li class="menu-item menu-item-has-children chariti-normal-menu"><a
+                                                href="info.html" aria-current="page">Info</a></li>
+                                        <li class="menu-item menu-item-has-children chariti-normal-menu">
+                                            <a href="faqs.html">FAQs</a>
+                                <li><a href="contact.html" aria-current="page">Contact Us</a>
+                                </li>
                                 </li>
                             </ul>
                         </div>
@@ -151,6 +154,11 @@
                                         <li class="menu-item" data-size="60"><a href="legal-services.html"> Legal Services
                                                     </a></li>
                                             </ul>
+                                        </li>
+                                        <li class="menu-item menu-item-has-children chariti-normal-menu"><a
+                                                href="info.html" aria-current="page">Info</a></li>
+                                        <li class="menu-item menu-item-has-children chariti-normal-menu">
+                                            <a href="faqs.html">FAQs</a>
                                         </li>
                                         <li class="menu-item menu-item-has-children chariti-normal-menu">
                                             <a href="contact.html">Contact</a>
@@ -719,9 +727,8 @@
                             <div id="text-1" class="widget widget_text chariti-widget">
                                 <div class="textwidget">
                                     <p><img class="alignnone size-full wp-image-7859"
-                                            src="../demo1/upload/footer-logo.png" alt="" width="92" />
-                                        <br /> Towards the end of the 19th century, with the advent of the New
-                                        Liberalism and the innovative
+                                            src="upload/logo-demo-3.png" alt="" width="200" />
+                                        <br /> Supporting and advocating for the Indian community — united in voice, strong in purpose.
                                     </p>
                                     <div class="gdlr-core-social-network-item gdlr-core-item-pdb  gdlr-core-none-align"
                                         style="padding-bottom: 0px ;"><a href="#url" target="_blank"
@@ -742,30 +749,29 @@
                         </div>
                         <div class="chariti-footer-column chariti-item-pdlr chariti-column-15">
                             <div id="text-10" class="widget widget_text chariti-widget">
-                                <h3 class="chariti-widget-title">Contact Info</h3><span class="clear"></span>
+                                <h3 class="chariti-widget-title">Contact Info :</h3><span class="clear"></span>
                                 <div class="textwidget">
-                                    <p>Box 3233
-                                        <br /> 1810 Kings Way
-                                        <br /> King Street, 5th Avenue, New York
-                                        <br />
+                                    <p> <i class="icon-phone"
+                                            style="font-size: 15px ;color: #3BCF93 ;margin-right: 10px ;"></i><strong
+                                            style="font-size: 15x; color: #ffffff">Address</strong> : 44 Fairground St
+                                        SE
+                                        <br /> Marietta, GA 30060
                                         <span class="gdlr-core-space-shortcode" style="margin-top: 0px ;"></span>
                                         <br />
                                         <i class="icon-phone"
                                             style="font-size: 15px ;color: #3BCF93 ;margin-right: 10px ;"></i><span
-                                            style="color: #ffffff;"><strong>New York</strong> : 1800-2355-2356</span>
+                                            style="color: #ffffff;"><strong>Phone Number</strong> : +1 (770)
+                                            990-6269</span>
                                         <br />
                                         <span class="gdlr-core-space-shortcode" style="margin-top: -15px ;"></span>
                                         <br />
-                                        <i class="icon-phone"
-                                            style="font-size: 15px ;color: #3BCF93 ;margin-right: 10px ;"></i><span
-                                            style="color: #ffffff;"><strong>London</strong> : 020-1455-236-34</span>
-                                        <br />
+
                                         <span class="gdlr-core-space-shortcode" style="margin-top: -15px ;"></span>
                                         <br />
                                         <i class="icon-envelope-open"
                                             style="font-size: 15px ;color: #3BCF93 ;margin-right: 10px ;"></i><a
                                             style="color: #ffffff;" href="#"><span
-                                                class="__cf_email__">test@gmail.com</span></a>
+                                                class="__cf_email__">info@theicas.org</span></a>
                                     </p>
                                 </div>
                             </div>
@@ -777,8 +783,9 @@
                                     <ul id="menu-quick-links" class="menu">
                                         <li class="menu-item"><a href="index.html">Home</a></li>
                                         <li class="menu-item"><a href="about.html">About Us</a></li>
-                                        <li class="menu-item"><a href="Servies.html">Our Servies</a>
+                                        <li class="menu-item"><a href="Servies.html">Our Services</a> 
                                         </li>
+                                                                                <li class="menu-item"><a href="info.html">Info</a></li>
                                         <li class="menu-item"><a href="contact.html">Contact</a></li>
                                     </ul>
                                 </div>
